--- a/rag_bot.Ipynb
+++ b/rag_bot.Ipynb
@@ -10,15 +10,26 @@
      "output_type": "stream",
      "text": [
       "/home/abdellatifunix/.local/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2025-04-17 11:26:36.138130: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-04-17 11:26:36.460443: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1744881996.496830   13870 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1744881996.504817   13870 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1744881996.605368   13870 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1744881996.605620   13870 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1744881996.605624   13870 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1744881996.605627   13870 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-04-17 11:26:36.619023: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Document pertinent :\n",
-      " Dénomination du médicament\n",
+      "✅ Document pertinent trouvé.\n",
+      "Dénomination du médicament\n",
       "CIMETIDINE ARROW 200 mg, comprimé effervescent\n",
       "Encadré\n",
       "Veuillez lire attentivement cette notice avant de prendre ce médicament car elle contient des informations importantes pour vous.\n",
@@ -172,36 +183,25 @@
       "[à compléter ultérieurement par le titulaire]\n",
       "Autres\n",
       "Des informations détaillées sur ce médicament sont disponibles sur le site Internet de lANSM (France).\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/abdellatifunix/.local/lib/python3.11/site-packages/transformers/generation/configuration_utils.py:631: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.7` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
-      "  warnings.warn(\n",
-      "/home/abdellatifunix/.local/lib/python3.11/site-packages/transformers/generation/configuration_utils.py:636: UserWarning: `do_sample` is set to `False`. However, `top_p` is set to `0.9` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `top_p`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Réponse : Classe pharmacothérapeutique : antagoniste des récepteurs H2\n"
+      "\n",
+      "\n",
+      "🧠 Réponse : Answer : CIMETIDINE ARROW 200 mg est un médicament de la classe des antagonistes des récepteurs H2, utilisé dans le traitement du reflux gastro-œsophagien chez l'adulte.\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "import requests\n",
     "from sentence_transformers import SentenceTransformer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from transformers import AutoTokenizer, AutoModelForQuestionAnswering\n",
-    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
-    "import torch\n",
-    "import os\n",
     "\n",
-    "# Étape 1 : Charger les documents\n",
+    "# 🔐 Ton token Hugging Face (protège-le en pratique !)\n",
+    "HF_TOKEN = \"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\"\n",
+    "API_URL = \"https://api-inference.huggingface.co/models/HuggingFaceH4/zephyr-7b-beta\"\n",
+    "HEADERS = {\"Authorization\": f\"Bearer {HF_TOKEN}\"}\n",
+    "\n",
+    "# 🔁 Fonctions pour embeddings\n",
+    "\n",
     "def load_documents_from_folder(folder_path):\n",
     "    documents = []\n",
     "    for filename in os.listdir(folder_path):\n",
@@ -210,77 +210,69 @@
     "                documents.append(file.read())\n",
     "    return documents\n",
     "\n",
-    "# Étape 2 : Créer des embeddings pour les documents\n",
     "def create_embeddings(documents, model_name='all-MiniLM-L6-v2'):\n",
     "    model = SentenceTransformer(model_name)\n",
     "    embeddings = model.encode(documents, convert_to_tensor=True)\n",
     "    return embeddings\n",
     "\n",
-    "# Étape 3 : Recherche du passage pertinent\n",
-    "def search_relevant_document(question, documents, embeddings, model_name='all-MiniLM-L6-v2'):\n",
+    "def search_relevant_document(question, documents, embeddings, model_name='all-MiniLM-L6-v2', threshold=0.4):\n",
     "    model = SentenceTransformer(model_name)\n",
     "    question_embedding = model.encode([question], convert_to_tensor=True)\n",
-    "    \n",
-    "    similarities = cosine_similarity(question_embedding.cpu().detach().numpy(), embeddings.cpu().detach().numpy())\n",
-    "    \n",
+    "    similarities = cosine_similarity(question_embedding.cpu().numpy(), embeddings.cpu().numpy())\n",
+    "    max_score = similarities.max()\n",
+    "    if max_score < threshold:\n",
+    "        return None\n",
     "    best_doc_index = similarities.argmax()\n",
     "    return documents[best_doc_index]\n",
     "\n",
-    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
+    "# 💡 Nouvelle version avec API Hugging Face\n",
     "\n",
-    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
-    "import torch\n",
-    "\n",
-    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
-    "import torch\n",
-    "\n",
-    "def answer_question_with_bert(question, context, model_name=\"google/flan-t5-large\"):\n",
-    "    tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "    model = AutoModelForSeq2SeqLM.from_pretrained(model_name)\n",
-    "\n",
-    "    # Nettoyer et tronquer le contexte pour éviter de dépasser la limite de tokens\n",
+    "def answer_question_with_mistral_api(question, context):\n",
     "    context = context.strip().replace(\"\\n\", \" \")\n",
-    "    max_context_tokens = 700  # Laisse de la place pour le prompt\n",
-    "    context_tokens = tokenizer.encode(context, truncation=True, max_length=max_context_tokens)\n",
-    "    truncated_context = tokenizer.decode(context_tokens, skip_special_tokens=True)\n",
+    "    truncated_context = context[:1500]  # max ~1500-2000 chars pour éviter dépassement token\n",
     "\n",
-    "    # Construire un prompt clair et structuré\n",
     "    prompt = (\n",
-    "        f\"Tu es un expert médical. Lis attentivement le contexte ci-dessous et réponds à la question de manière précise. \"\n",
+    "        f\"[INST] Réponds à la question suivante en te basant uniquement sur le contexte fourni.\\n\\n\"\n",
+    "        f\"Ne me demandes pas de consulter les séctions de la notice.\\n\\n\"\n",
     "        f\"Contexte : {truncated_context}\\n\\n\"\n",
-    "        f\"Question : {question}\\n\\n\"\n",
-    "        f\"Réponse :\"\n",
+    "        f\"Question : {question} [/INST]\"\n",
     "    )\n",
     "\n",
+    "    payload = {\n",
+    "        \"inputs\": prompt,\n",
+    "        \"parameters\": {\n",
+    "            \"max_new_tokens\": 256,\n",
+    "            \"temperature\": 0.7,\n",
+    "            \"top_p\": 0.9,\n",
+    "            \"do_sample\": False,\n",
+    "            \"return_full_text\": False\n",
+    "        }\n",
+    "    }\n",
     "\n",
-    "    inputs = tokenizer(prompt, return_tensors=\"pt\", truncation=True, max_length=1024).to(model.device)\n",
+    "    response = requests.post(API_URL, headers=HEADERS, json=payload)\n",
     "\n",
-    "    # Génération avec paramètres de décodage contrôlés pour améliorer la qualité\n",
-    "    outputs = model.generate(\n",
-    "        **inputs,\n",
-    "        max_new_tokens=200,         # Limite de tokens de la réponse\n",
-    "        do_sample=False,            # Pas de génération créative (pour des réponses déterministes)\n",
-    "        num_beams=4,                # Beam search améliore la précision\n",
-    "        early_stopping=True,        # Arrêt anticipé si la réponse est complète\n",
-    "        temperature=0.7,            # Contrôle la créativité de la réponse\n",
-    "        top_p=0.9                   # Top-p sampling pour plus de diversité si do_sample=True\n",
-    "    )\n",
+    "    if response.status_code == 200:\n",
+    "        generated_text = response.json()[0][\"generated_text\"]\n",
+    "        return generated_text.strip()\n",
+    "    else:\n",
+    "        return f\"Erreur API ({response.status_code}): {response.text}\"\n",
     "\n",
-    "    answer = tokenizer.decode(outputs[0], skip_special_tokens=True).strip()\n",
+    "# 🧪 Exemple d'utilisation\n",
     "\n",
-    "    return answer\n",
-    "\n",
-    "# Exemple d'utilisation\n",
     "folder_path = 'notices_txt'\n",
+    "question = \" c'est quoi CIMETIDINE ARROW 200 mg ? \"\n",
+    "\n",
     "documents = load_documents_from_folder(folder_path)\n",
     "embeddings = create_embeddings(documents)\n",
-    "\n",
-    "question = \"Qu'est-ce que CIMETIDINE ARROW 200 mg ?\"\n",
     "relevant_document = search_relevant_document(question, documents, embeddings)\n",
-    "print(\"Document pertinent :\\n\", relevant_document)\n",
     "\n",
-    "answer = answer_question_with_bert(question, relevant_document)\n",
-    "print(\"Réponse :\", answer)\n"
+    "if relevant_document:\n",
+    "    print(\"✅ Document pertinent trouvé.\")\n",
+    "    print(relevant_document)\n",
+    "    answer = answer_question_with_mistral_api(question, relevant_document)\n",
+    "    print(\"\\n🧠 Réponse :\", answer)\n",
+    "else:\n",
+    "    print(\"❗ Aucun document pertinent trouvé pour cette question.\")\n"
    ]
   }
  ],
@@ -300,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
