allow pushing token

--- a/rag_bot.Ipynb
+++ b/rag_bot.Ipynb
@@ -196,9 +196,9 @@
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
     "# 🔐 Ton token Hugging Face (protège-le en pratique !)\n",
-    "# HF_TOKEN = \"\"\n",
+    "HF_TOKEN = \"\"\n",
     "API_URL = \"https://api-inference.huggingface.co/models/HuggingFaceH4/zephyr-7b-beta\"\n",
-    "# HEADERS = {\"Authorization\": f\"Bearer {HF_TOKEN}\"}\n",
+    "HEADERS = {\"Authorization\": f\"Bearer {HF_TOKEN}\"}\n",
     "\n",
     "# 🔁 Fonctions pour embeddings\n",
     "\n",
