--- a/dataset_scrap.Ipynb
+++ b/dataset_scrap.Ipynb
@@ -2,7 +2,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [
                 {
@@ -10,15 +10,15 @@
                     "output_type": "stream",
                     "text": [
                         "🔗 Traitement de : CIMETIDINE ARROW 200 mg\n",
-                        "✅ Fichier enregistré : notices_txt/CIMETIDINE ARROW 200 mg.txt\n",
+                        "✅ Fichier enregistré : notices_txt\\CIMETIDINE ARROW 200 mg.txt\n",
                         "🔗 Traitement de : FAMOTIDINE EG 20 mg\n",
-                        "✅ Fichier enregistré : notices_txt/FAMOTIDINE EG 20 mg.txt\n",
+                        "✅ Fichier enregistré : notices_txt\\FAMOTIDINE EG 20 mg.txt\n",
                         "🔗 Traitement de : FAMOTIDINE EG 40 mg\n",
-                        "✅ Fichier enregistré : notices_txt/FAMOTIDINE EG 40 mg.txt\n",
+                        "✅ Fichier enregistré : notices_txt\\FAMOTIDINE EG 40 mg.txt\n",
                         "🔗 Traitement de : MOPRAL 10 mg\n",
-                        "✅ Fichier enregistré : notices_txt/MOPRAL 10 mg.txt\n",
+                        "✅ Fichier enregistré : notices_txt\\MOPRAL 10 mg.txt\n",
                         "🔗 Traitement de : MOPRAL 20 mg\n",
-                        "✅ Fichier enregistré : notices_txt/MOPRAL 20 mg.txt\n"
+                        "✅ Fichier enregistré : notices_txt\\MOPRAL 20 mg.txt\n"
                     ]
                 }
             ],
@@ -86,7 +86,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": "base",
             "language": "python",
             "name": "python3"
         },
@@ -100,7 +100,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.11.0"
+            "version": "3.9.7"
         }
     },
     "nbformat": 4,
