--- a/rag_bot.Ipynb
+++ b/rag_bot.Ipynb
@@ -2,32 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import requests\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/abdellatifunix/.local/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-04-17 11:26:36.138130: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-04-17 11:26:36.460443: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1744881996.496830   13870 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1744881996.504817   13870 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1744881996.605368   13870 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1744881996.605620   13870 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1744881996.605624   13870 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1744881996.605627   13870 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-04-17 11:26:36.619023: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "✅ Embeddings loaded from embeddings.pt\n",
       "✅ Document pertinent trouvé.\n",
       "Dénomination du médicament\n",
       "CIMETIDINE ARROW 200 mg, comprimé effervescent\n",
@@ -185,20 +179,25 @@
       "Des informations détaillées sur ce médicament sont disponibles sur le site Internet de lANSM (France).\n",
       "\n",
       "\n",
-      "🧠 Réponse : Answer : CIMETIDINE ARROW 200 mg est un médicament de la classe des antagonistes des récepteurs H2, utilisé dans le traitement du reflux gastro-œsophagien chez l'adulte.\n"
+      "🧠 Réponse : Erreur API (404): Not Found\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
+    "import os \n",
     "import requests\n",
     "from sentence_transformers import SentenceTransformer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import torch\n",
     "\n",
-    "# 🔐 Ton token Hugging Face (protège-le en pratique !)\n",
-    "HF_TOKEN = \"\"\n",
-    "API_URL = \"https://api-inference.huggingface.co/models/HuggingFaceH4/zephyr-7b-beta\"\n",
+    "# 🔐 Ton token Hugging Face\n",
+    "HF_TOKEN = \"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\"\n",
+    "API_URL = \"https://api-inference.huggingface.co/models/NousResearch/Nous-Hermes-2-Mistral-7B-DPO\"\n",
     "HEADERS = {\"Authorization\": f\"Bearer {HF_TOKEN}\"}\n",
+    "\n",
+    "# 📂 Dossier contenant les fichiers textes des notices\n",
+    "folder_path = 'notices_txt'\n",
+    "embeddings_file = \"embeddings.pt\"\n",
     "\n",
     "# 🔁 Fonctions pour embeddings\n",
     "\n",
@@ -210,10 +209,20 @@
     "                documents.append(file.read())\n",
     "    return documents\n",
     "\n",
-    "def create_embeddings(documents, model_name='all-MiniLM-L6-v2'):\n",
+    "def create_and_save_embeddings(documents, model_name='all-MiniLM-L6-v2', embeddings_path=embeddings_file):\n",
     "    model = SentenceTransformer(model_name)\n",
     "    embeddings = model.encode(documents, convert_to_tensor=True)\n",
+    "    torch.save(embeddings, embeddings_path)\n",
+    "    print(f\"✅ Embeddings saved to {embeddings_path}\")\n",
     "    return embeddings\n",
+    "\n",
+    "def load_embeddings(embeddings_path=embeddings_file):\n",
+    "    if os.path.exists(embeddings_path):\n",
+    "        embeddings = torch.load(embeddings_path)\n",
+    "        print(f\"✅ Embeddings loaded from {embeddings_path}\")\n",
+    "        return embeddings\n",
+    "    else:\n",
+    "        return None\n",
     "\n",
     "def search_relevant_document(question, documents, embeddings, model_name='all-MiniLM-L6-v2', threshold=0.4):\n",
     "    model = SentenceTransformer(model_name)\n",
@@ -225,24 +234,36 @@
     "    best_doc_index = similarities.argmax()\n",
     "    return documents[best_doc_index]\n",
     "\n",
-    "# 💡 Nouvelle version avec API Hugging Face\n",
+    "# 💡 Version avec Nous-Hermes-2 via API Hugging Face\n",
     "\n",
     "def answer_question_with_mistral_api(question, context):\n",
     "    context = context.strip().replace(\"\\n\", \" \")\n",
-    "    truncated_context = context[:1500]  # max ~1500-2000 chars pour éviter dépassement token\n",
+    "    truncated_context = context[:1500]  # max ~1500-2000 caractères pour rester dans les limites\n",
     "\n",
-    "    prompt = (\n",
-    "        f\"[INST] Réponds à la question suivante en te basant uniquement sur le contexte fourni.\\n\\n\"\n",
-    "        f\"Ne me demandes pas de consulter les séctions de la notice.\\n\\n\"\n",
-    "        f\"Contexte : {truncated_context}\\n\\n\"\n",
-    "        f\"Question : {question} [/INST]\"\n",
-    "    )\n",
+    "    prompt = f\"\"\"\n",
+    "    [INST]\n",
+    "    Tu es un assistant **francophone** chargé de répondre à des questions sur les médicaments en te basant **exclusivement sur le contenu de la notice fourni ci-dessous**.\n",
+    "\n",
+    "    🧾 Consignes obligatoires :\n",
+    "    - Réponds **en français uniquement**.\n",
+    "    - Ne donne une réponse que **si l’information figure dans la notice**.\n",
+    "    - ❌ N’invente rien. Ne reformule pas librement. Tu peux **résumer légèrement**, mais tu dois **rester fidèle à la notice**.\n",
+    "    - ❌ Ne fais **aucune référence à la notice elle-même**, à ses sections, ni à un professionnel de santé.\n",
+    "    - Si l’information demandée n’est pas dans le contexte, réponds : **\"L'information demandée n’est pas disponible dans le contexte fourni.\"**\n",
+    "\n",
+    "    Notice :\n",
+    "    {truncated_context}\n",
+    "    [FIN DU CONTEXTE]\n",
+    "\n",
+    "    Question : {question}\n",
+    "    [/INST]\n",
+    "    \"\"\"\n",
     "\n",
     "    payload = {\n",
     "        \"inputs\": prompt,\n",
     "        \"parameters\": {\n",
     "            \"max_new_tokens\": 256,\n",
-    "            \"temperature\": 0.7,\n",
+    "            \"temperature\": 0.3,\n",
     "            \"top_p\": 0.9,\n",
     "            \"do_sample\": False,\n",
     "            \"return_full_text\": False\n",
@@ -252,18 +273,20 @@
     "    response = requests.post(API_URL, headers=HEADERS, json=payload)\n",
     "\n",
     "    if response.status_code == 200:\n",
-    "        generated_text = response.json()[0][\"generated_text\"]\n",
-    "        return generated_text.strip()\n",
+    "        return response.json()[0][\"generated_text\"].strip()\n",
     "    else:\n",
     "        return f\"Erreur API ({response.status_code}): {response.text}\"\n",
     "\n",
-    "# 🧪 Exemple d'utilisation\n",
-    "\n",
-    "folder_path = 'notices_txt'\n",
-    "question = \" c'est quoi CIMETIDINE ARROW 200 mg ? \"\n",
+    "# 🧪 Utilisation\n",
     "\n",
     "documents = load_documents_from_folder(folder_path)\n",
-    "embeddings = create_embeddings(documents)\n",
+    "\n",
+    "# Essaie de charger les embeddings, sinon crée-les\n",
+    "embeddings = load_embeddings()\n",
+    "if embeddings is None:\n",
+    "    embeddings = create_and_save_embeddings(documents)\n",
+    "\n",
+    "question = \"CONTENU DE LEMBALLAGE ET AUTRES INFORMATIONS de CIMETIDINE ARROW 200 mg ?\"\n",
     "relevant_document = search_relevant_document(question, documents, embeddings)\n",
     "\n",
     "if relevant_document:\n",
@@ -274,11 +297,29 @@
     "else:\n",
     "    print(\"❗ Aucun document pertinent trouvé pour cette question.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_24536/1496833733.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\issom\\AppData\\Local\\Temp/ipykernel_24536/1496833733.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    ollama pull nous-hermes2\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "ollama pull nous-hermes2\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -292,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
